--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ left: 50%;
 <h1 id="unplacedheader" style="position: relative; width: 100%; text-align: center; top: 85%;"> Demo </h1>
 <input type="file" style="position: relative; transform: translate(-50%, -50%); left: 30%; top: 90%;"></input>
 <desmond-player id="player" style="position: relative; transform: translate(-50%, -50%); left: 30%; top: 100%; border-color: black;"></desmond-player>
+<a href="demos/firmware.html" id="unplacedheader" style="position: relative; width: 100%; text-align: center; top: 105%;"> Firmware Demo </a>
 <script src="dist/desmond.min.js"></script>
 <script>
   document.querySelector("input").onchange = function(){
