Color input text white

--- a/demos/firmware.html
+++ b/demos/firmware.html
@@ -11,7 +11,7 @@
 
 <body style="background: black;">
     <desmond-player></desmond-player>
-    <input type="file" style="position: absolute; transform: translate(-50%, -50%); left: 50%; top: 95%;"></input>
+    <input type="file" style="position: absolute; transform: translate(-50%, -50%); left: 50%; top: 95%; color: white;"></input>
     <script src="../dist/desmond.min.js"></script>
     <script>
         document.querySelector("input").onchange = function() {
