--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ left: 50%;
 }
 </style>
 <h1 id="header"> Desmond </h1>
-<p id="subheader"> Embed a Nintendo DS emulator easily. </p>
+<p id="subheader"> Embed a Nintendo DS emulator easily. (Embeddable version of DeSmuME-wasm) </p>
 <h1 id="unplacedheader" style="top: 30%;"> Usage </h1>
 <div id="code" style="position: absolute; transform: translate(-50%, -50%); top: 61%; left: 50%;">&lt;html&gt;&#10;<br>
   &lt;body&gt;&#10;<br>    &lt;desmond-player id=&#34;player&#34;&gt;&lt;/desmond-player&gt;&#10;<br>    &lt;script src=&#34;desmond.min.js&#34;&gt;&lt;/script&gt;&#10;<br>    &lt;script&gt;&#10;<br>     window.onload = function(){<br>&#10;    document.getElementById(&#34;player&#34;).loadURL(&#34;path-to-game.nds&#34;);<br>&#10;     }&#10;    <br>&lt;/script&gt;&#10;<br>  &lt;/body&gt;<br>&#10;&lt;/html&gt;</div>
